--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,11 +12,19 @@ header {
 	margin-top: 212px;
 	margin-bottom: 85px;
 }
+#downloads {
+	margin-bottom: 0;
+}
+header {
+	background: rgb(0,0,0);
+	padding: 10px 0;
+	position: absolute;
+}
 footer {
-	background: rgba(0,0,0,0.1);
+	background: rgb(0,0,0);
 	width: 100%;
 	border-top: 1px dashed #b5e853;
-	padding: 20px 0;
+	padding: 10px 0;
 	margin: 20px 0 0 0;
 	position: fixed;
 	bottom: 0;
